--- a/index.ipynb
+++ b/index.ipynb
@@ -433,23 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'neighborhood_markers' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-e10cad72299e>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-1799531b03dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighborhood_markers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'neighborhood_markers' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-e10cad72299e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    neighborhood_markers.pop()'la boca'\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "neighborhood_markers.pop()''"
+    "neighborhood_markers.pop()'la boca'"
    ]
   },
   {
