--- a/index.ipynb
+++ b/index.ipynb
@@ -433,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.pop>"
+       "<folium.map.Marker at 0x7f014f1bb780>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,15 +453,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "False\n"
+      "5\n",
+      "True\n"
      ]
     }
    ],
